objects/pi__PardotTask__c.object
<CustomObject>
    <description>Used by Pardot to upsert standard Tasks and prevent the creation of duplicates.</description>
    <fields>
        <fullName>pi__ErrorMessage__c</fullName>
        <description>Any error that occurred during Task creation</description>
        <encryptionScheme>None</encryptionScheme>
        <label>ErrorMessage</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__PardotSourceId__c</fullName>
        <description>A unique identifier for the PardotTask that is generated in Pardot by combining the source table name and the source record id.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>PardotSourceId</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>pi__SerializedTask__c</fullName>
        <description>Holds JSON data representing the Task (sObject) fields and values to be inserted/updated.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>SerializedTask</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__Status__c</fullName>
        <defaultValue>&quot;READY&quot;</defaultValue>
        <description>The status of the Task that is to be created from this object</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Status</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__TaskId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>A foreign key to the Task sObject.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>TaskId</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Pardot Task</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Pardot Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pardot Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>